# raster

./: .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt  raster_benchmarks.cpp
raster/: algorithm.h  buffer_view.h  color.h  image.h  image_iterator.h  image_spec.h  image_view.h  pixel.h  png.h  primitives.h  raster.h
tests/: CMakeLists.txt  algorithms.cpp  bitsperpixel.cpp  colorconversion.cpp  rowstride.cpp  test.h
tools/: CMakeLists.txt  raster.cpp
